fix(Person): make getResources return unmodifiable set
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>